RouteLogic-v4.0.0/force-app/main/default/objects/AI_Rate_Limit__c/AI_Rate_Limit__c.object-meta.xml
<CustomObject>
    <description>Stores rate limit data for AI API calls when Platform Cache is unavailable</description>
    <label>AI Rate Limit</label>
    <nameField>
        <displayFormat>RL-{0000000}</displayFormat>
        <label>Rate Limit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Rate Limits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>