RouteLogic-v4.0.0/force-app/main/default/objects/AI_Rate_Limit__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Unique identifier for rate limiting (user ID, API key, etc.)</description>
    <inlineHelpText>The unique identifier being rate limited</inlineHelpText>
    <label>Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>