RouteLogic-v4.0.0/force-app/main/default/objects/AI_Rate_Limit__c/fields/Window_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Window_Seconds__c</fullName>
    <description>Time window in seconds for this rate limit</description>
    <label>Window Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>